<resources>
    <string name="app_name">PetCare</string>
    <string name="Usuario_Login">Usuario:</string>
    <string name="senha_Login">Senha:</string>
    <string name="Usuario_login" />
    <string name="Senha_Login" />
    <string name="Cadastra_Usuario">Cadastrar</string>
    <string name="logar_usuario">Entrar</string>
    <string name="Cadastro_Usuario" />
    <string name="NomePessoa" />
    <string name="Telefone" />
    <string name="Senha_cadastro" />
    <string name="SenhaCadastro" />
    <string name="botao_cadastro">Cadastrar</string>
    <string name="botao_Raçao">Ração</string>
    <string name="botaoMedicamento">Medicamento</string>
    <string name="botaoAcessorio">Acessórios</string>
    <string name="botaoServico">Serviços</string>
    <string name="ração_peixe">Ração de peixe</string>
    <string name="botao_racao_cahorroCompra">Ração de cachorro</string>
    <string name="botaoAdicionarCarinhoPeixe01">Adicionar no carrinho</string>
    <string name="descri_o_ra_o_spirulina_um_alimento_rico_em_nutrientes_tem_presen_a_marcante_de_spirulina_especial_para_peixes_ornamentais_tropicais_ou_marinho_a_ra_o_spirulina_t_o_completa_que_possui_prebi_ticos_que_ajudam_no_aumento_da_flora_intestinal_ben_fica_fundamental_para_manter_a_sa_de_do_seu_peixinho_composi_o_b_sica_farelo_de_soja_farinha_de_peixe_farinha_de_lula_espirulina_desidratada_10_1_f_cula_de_mandioca_farinha_de_lula_adsorvente_de_micotoxinas_levedura_leo_de_soja_refinado_premix_vitam_nico_mineral_cloreto_de_s_dio_leo_de_peixe_farinha_de_minhoca_premix_mineral_0_1_aditivo_prebi_tico_0_09_antioxidantes_etoxiquin_propilgalato_cido_c_trico_bha_bht_aditivo_enzim_tico_0_05_esp_cies_doadoras_de_gene_agrobacterium_tumefaciens_bacillus_thuringiensis_streptomyces_viridochromogenes_n_veis_de_garantia_umidade_m_x_100g_kg_10_prote_na_bruta_min_420_g_kg_42_extrato_de_et_reo_min_50g_kg_5_mat_ria_fibrosa_m_x_40g_kg_4_mat_ria_mineral_m_x_150_g_kg_15_c_lcio_m_x_30_g_kg_3_c_lcio_min_16g_kg_1_6_fosforo_min_8000_mg_kg_0_8_mananoligossacar_deo_min_200mg_kg_0_02_protease_min_350_u_kg_amilase_min_15_u_kg_celulase_min_20_u_kg_modo_de_uso_fornecer_quantidade_a_ser_totalmente_consumida_em_at_cinco_minutos_de_duas_a_quatro_vezes_por_dia">Descrição Ração spirulina é um alimento rico em nutrientes. Tem presença marcante de spirulina especial para peixes ornamentais tropicais ou marinho. A ração spirulina é tão completa que possui prebióticos que ajudam no aumento da flora intestinal benéfica, fundamental para manter a saúde do seu peixinho. Composição Básica: Farelo de soja*, farinha de peixe, farinha de lula, espirulina desidratada, (10,1%), fécula de mandioca, farinha de lula, adsorvente de micotoxinas, levedura, óleo de soja refinado*, premix vitamínico mineral, cloreto de sódio, óleo de peixe, farinha de minhoca, premix mineral (0,1%), aditivo prebiótico (0,09%), antioxidantes (Etoxiquin, Propilgalato, ácido cítrico, BHA, BHT), aditivo enzimático (0,05 %). *Espécies doadoras de gene: Agrobacterium tumefaciens, Bacillus thuringiensis, Streptomyces viridochromogenes. Níveis de Garantia: Umidade (máx.) 100g/kg 10% Proteína Bruta (min) 420 g/ kg 42% Extrato de etéreo (min) 50g/kg 5% Matéria fibrosa (máx.) 40g/kg 4% Matéria mineral (máx.) 150 g/kg 15% Cálcio (máx.) 30 g/kg 3% Cálcio (min) 16g/kg 1,6% Fosforo (min) 8000 mg/kg 0,8 % Mananoligossacarídeo (min) 200mg/kg 0,02% Protease(min) 350 u/kg Amilase(min) 15 u/kg Celulase (min) 20 u/kg Modo de uso: Fornecer quantidade a ser totalmente consumida em até cinco minutos, de duas a quatro vezes por dia.</string>
    <string name="botaoAdicionarRacaoPeixe1">Adicionar no carrinho</string>
    <string name="adicionarRacaoPeixe2">Adicionar no carrinho</string>
    <string name="botaoAdicionarRacaoCarro">Adicionar no carrinho</string>
    <string name="botaoAdicionarRacaoCAchorro02">Adicionar no carrinho</string>
    <string name="botaoRacaoGatoCompra">Ração de Gato</string>
    <string name="botaoAdicionarRacaoGato">Adicionar  a o carrinho</string>
    <string name="botaoAdicionarRacao2">Adicionar ao Carrinho</string>
    <string name="botaoRacaopassaro" />
    <string name="botaoRacaoPassaro">Ração de passaro</string>
    <string name="botaoAdicionarCArrinhoPassaro">Adicionar no carrinho</string>
    <string name="botaoAdionarCarrrinhoPassaro02">Adicionar no carrinho</string>
    <string name="medicamentoVermifugos">Vermífugos</string>
    <string name="AntiPugaECarrapato">Anti-Pulga e carrapato</string>
    <string name="Antibiotico">Antibíotico</string>
    <string name="AdicionarVermifugos01NoCarrinho">Adicionar no carrinho</string>
    <string name="vermifugos02">Adicionar no carrinho</string>
    <string name="AntiPulga_E_Carrapato">Adicinar no carrinho</string>
    <string name="adicionarAoCArrrinhoatipulga02">Adicionar no Carrinho</string>
    <string name="botaoAdicionarCarrinhoAtibiotico1">Adicionar no carrinho</string>
    <string name="AdicionarCarrinhoAntibiotio02">Adicionar no carrinho</string>
    <string name="Comedouro_bebedouro">Comedouro e Bebedouro</string>
    <string name="Brinquedos" />
    <string name="BrinquedosPet">Brinquedos</string>
    <string name="Coleira">Coleira</string>
    <string name="AdicionarCarrinhoComedouro">Adicionar no carrinho</string>
    <string name="AdicionarCarrinhoBebedouro">Adicionar no carrinho</string>
    <string name="botaoADicionarCarrinhobrinquedo">Adiconar no carrinho</string>
    <string name="adicionarCarrinhoBrinquedo02">Adicionar no carrinho</string>
</resources>
