<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prefereciacorusuario.cursoandroid.com.petcare.MainActivity"
    android:background="#3bd16d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Usuario :"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="178dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_UsuarioId"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Usuario_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Senha :"
        android:id="@+id/textView2"
        android:layout_below="@+id/login_UsuarioId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/SenhaloginId"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_UsuarioId"
        android:layout_alignEnd="@+id/login_UsuarioId"
        android:text="@string/Senha_Login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cadastra_Usuario"
        android:id="@+id/botaoCadastraId"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/SenhaloginId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:background="#90f840" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logar_usuario"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/botaoCadastraId"
        android:layout_alignRight="@+id/SenhaloginId"
        android:layout_alignEnd="@+id/SenhaloginId"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:background="#90f840" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:background="@drawable/dc"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
</RelativeLayout>
