<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prefereciacorusuario.cursoandroid.com.petcare.MedicamentoProdutosActivity"
    android:background="#3bd16d">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicamentoVermifugos"
        android:id="@+id/botaoVermifugos"
        android:layout_marginTop="113dp"
        android:layout_below="@+id/textView27"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#a3f77f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AntiPugaECarrapato"
        android:id="@+id/botaoCarrapatoEpulga"
        android:layout_below="@+id/botaoVermifugos"
        android:layout_marginTop="96dp"
        android:layout_alignRight="@+id/botaoAntibiotico"
        android:layout_alignEnd="@+id/botaoAntibiotico"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#a3f77f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Antibiotico"
        android:id="@+id/botaoAntibiotico"
        android:layout_below="@+id/botaoCarrapatoEpulga"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="81dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#a3f77f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medicamentos"
        android:id="@+id/textView27"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textColor="#060505" />
</RelativeLayout>
